apps/adguard-sync/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-sync
  labels:
    app: adguard-sync
    app.kubernetes.io/instance: adguard-sync-homelab
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: adguard-sync
    app.kubernetes.io/part-of: adguard-sync
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: adguard-sync
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: adguard-sync
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: adguard-sync
    protocol: TCP
    port: 80
    targetPort: 8080
  internalTrafficPolicy: Cluster
