apps/adguard-sync/base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-sync
  namespace: adguard-sync
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress
  hostnames:
    - adguard-sync.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard-sync
          port: 80
